# schani_userinfo

./: .env.example  .env.testing  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.dev  README.md
migrations/20170601075424_create_users/: up.sql
migrations/20170601120857_create_settings/: up.sql
src/: auth.rs  db.rs  lib.rs  main.rs  models.rs  schema.rs  settings.rs  users.rs
